--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 
-.sc-video{}
 .sc-video .swiper-slide .video-area video{
     position: relative;
     width: 100%;
@@ -37,19 +36,60 @@
 }
 
 /* common */
-.group-header{}
-.group-header .headline{ font-size: 64px; line-height: 71px; letter-spacing: -0.64px; margin-bottom: 20px; }
-.group-header .sub-area{ display: flex; align-items: flex-start; }
-.group-header .sub-area .desc{ position: relative; display: inline; padding-right: 30px; font-size: 22px; line-height: 32px; letter-spacing: -0.44px; font-weight: bold; }
+.group-header .headline{ 
+    font-size: 64px; 
+    line-height: 71px; 
+    letter-spacing: -0.64px; 
+    margin-bottom: 20px; 
+}
+.group-header .sub-area{ 
+    display: flex; 
+    align-items: flex-start; 
+}
+.group-header .sub-area .desc{ 
+    position: relative; 
+    display: inline; 
+    padding-right: 30px; 
+    font-size: 22px; 
+    line-height: 32px; 
+    letter-spacing: -0.44px; 
+    font-weight: 700; 
+}
 
-.link-go{ position: relative; margin-top: 2px; line-height: 18px; letter-spacing: -0.36px; }
-.link-go::before{ position: absolute; bottom: 0; left: 0; right: 0; height: 1px; background: #000; content: ''; }
+.link-go{ 
+    position: relative; 
+    margin-top: 2px; 
+    line-height: 18px; 
+    letter-spacing: -0.36px; 
+}
+.link-go::before{ 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    right: 0; 
+    height: 1px; 
+    background: #000; 
+    content: ''; 
+}
 
-.control-wrap{ display:flex; gap: 7px; position: absolute; bottom: 0;right: 0; }
-.control-wrap [class*='btn-']{ width: 33px; height: 32px; background-position: -187px -172px; }
-.control-wrap .btn-prev{}
-.control-wrap .btn-next{ transform: rotate(180deg); }
-.control-wrap .swiper-button-disabled{ opacity: 0.5; }
+.control-wrap{ 
+    display:flex; 
+    gap: 7px; 
+    position: absolute;
+     bottom: 0;
+    right: 0; 
+}
+.control-wrap [class*='btn-']{ 
+    width: 33px; 
+    height: 32px; 
+    background-position: -187px -172px; 
+}
+.control-wrap .btn-next{ 
+    transform: rotate(180deg); 
+}
+.control-wrap .swiper-button-disabled{ 
+    opacity: 0.5; 
+}
 
 
 
@@ -57,21 +97,69 @@
 
 
 
-.sc-team{ position: relative; padding-bottom: 89px; padding-top: 126px; background-color: #fafafa; z-index: 1; }
-.sc-team .btn-search{ display: none; }
-.sc-team .group-career1{ position: absolute; top: 0;left: 0; width: 100%; transform: translateY(-50%); }
-.sc-team .group-career1 .flex-area{ display: flex; align-items: center; background: #fff; height: 54px; }
-.sc-team .group-career1 .flex-area::before{ display: flex; margin-left: 21px; margin-right: 28px; width: 18px; height: 18px; background-position: -245px -40px; content: ''; }
+.sc-team{ 
+    position: relative; 
+    padding-bottom: 89px; 
+    padding-top: 126px; 
+    background: #fafafa; 
+    z-index: 1; 
+}
+.sc-team .btn-search{ 
+    display: none; 
+}
+.sc-team .group-career1{ 
+    position: absolute; 
+    top: 0;
+    left: 0; 
+    width: 100%; 
+    transform: translateY(-50%); 
+}
+.sc-team .group-career1 .flex-area{ 
+    display: flex; 
+    align-items: center; 
+    background: #fff; 
+    height: 54px; 
+}
+.sc-team .group-career1 .flex-area::before{ 
+    display: flex; 
+    margin-left: 21px; 
+    margin-right: 28px; 
+    width: 18px; 
+    height: 18px; 
+    background-position: -245px -40px; 
+    content: ''; 
+}
 
 
 .sc-team .group-career1 .input-box,
-.sc-team .group-career1 .select-box{ position: relative; display: flex; flex: 1; font-weight: bold; height: 100%;}
-.sc-team .group-career1 .input-box{color: #000;}
-.sc-team .group-career1 .select-box{color: #d0d0d0;}
-.sc-team .group-career1 label{ display: flex; align-items: center; color: #000;}
-.sc-team .group-career1 .input-box label{ margin-right: 9px;}
-.sc-team .group-career1 .input-text{flex: 1; padding-right: 20px; }
-.sc-team .group-career1 .input-text::placeholder{color: #d0d0d0;}
+.sc-team .group-career1 .select-box{ 
+    position: relative; 
+    display: flex; 
+    flex: 1; 
+    font-weight: 700; 
+    height: 100%;
+}
+.sc-team .group-career1 .input-box{
+    color: #000;
+}
+.sc-team .group-career1 .select-box{
+    color: #d0d0d0;
+}
+.sc-team .group-career1 label{ 
+    display: flex; 
+    align-items: center; 
+    color: #000;
+}
+.sc-team .group-career1 .input-box label{ 
+    margin-right: 9px;
+}
+.sc-team .group-career1 .input-text{
+    flex: 1; 
+    padding-right: 20px; 
+}
+.sc-team .group-career1 .input-text::placeholder{
+    color: #d0d0d0;
+}
 .sc-team .group-career1 select{ 
     flex: 1; 
     padding: 0 25px 0 9px; 
@@ -91,10 +179,24 @@
 
 
 
-.sc-team .group-career1 .select option{font-weight: normal; color: #000;}
-.sc-team .group-career1 .select option:disabled{display: none;}
-.sc-team .group-career1 .btn-submit{ display: block; height: 100%; width: 97px; background: #000; color: #fff;}
-.sc-team .group-career1 .btn-submit:hover{ background-color: #16ef72; color: #000; }
+.sc-team .group-career1 .select option{
+    font-weight: normal; 
+    color: #000;
+}
+.sc-team .group-career1 .select option:disabled{
+    display: none;
+}
+.sc-team .group-career1 .btn-submit{ 
+    display: block; 
+    height: 100%; 
+    width: 97px; 
+    background: #000; 
+    color: #fff;
+}
+.sc-team .group-career1 .btn-submit:hover{ 
+    background: #16ef72; 
+    color: #000; 
+}
 
 
 
@@ -148,10 +250,13 @@
 }
 
 
-.sc-team .group-career2 .chk-box, .sc-team .group-career2 .item{
+.sc-team .group-career2 .chk-box, 
+.sc-team .group-career2 .item{
     margin-top: 14px;
 }
-.sc-team .group-career2 .chk-box, .sc-team .group-career2 .career, .sc-team .group-career2 .sub{
+.sc-team .group-career2 .chk-box, 
+.sc-team .group-career2 .career, 
+.sc-team .group-career2 .sub{
     line-height: 26px;
     font-family: "NanumSquare", "나눔스퀘어", "돋움", dotum, arial, sans-serif;
 }
@@ -168,7 +273,10 @@
     border: 1px solid #000;;
     background: #000;
 }
-.sc-team .group-career2 .chk-box input, .sc-team .group-career2 .item > .chk-box, .sc-team .group-career2 .depth2, .sc-team .group-career2 .depth3{
+.sc-team .group-career2 .chk-box input, 
+.sc-team .group-career2 .item > .chk-box, 
+.sc-team .group-career2 .depth2, 
+.sc-team .group-career2 .depth3{
     display: none;
 }
 .sc-team .group-career2 .career{
@@ -269,7 +377,8 @@
     background-size: 328px 205px;
     content: '';
 }
-.sc-team .group-career2 .career-list, .sc-team .group-career2 .btn-clear{
+.sc-team .group-career2 .career-list, 
+.sc-team .group-career2 .btn-clear{
     margin-top: 45px;
 }
 .sc-team .group-career2 h3{
@@ -292,7 +401,7 @@
     left: 0;
     right: 0;
     height: 1px;
-    background-color: #000;
+    background: #000;
     content: "";
 }
 .sc-team .group-career2 .btn-close{
@@ -317,44 +426,139 @@
 
 
 
-.sc-people{ padding: 95px 0 0; overflow: hidden; }
-.sc-people .common-inner{}
+.sc-people{ 
+    padding: 95px 0 0; 
+    overflow: hidden; 
+}
 
 
-.group-people, .group-benefits{ position: relative; }
+.group-people, .group-benefits{ 
+    position: relative; 
+}
 
 
-.sc-people .people-slider{ padding-bottom: 68px; margin: 60px 0px 0; overflow:initial; }
+.sc-people .people-slider{ 
+    padding-bottom: 68px; 
+    margin: 60px 0px 0; 
+    overflow:initial; 
+}
 
-.sc-people .swiper-slide a{ display: block; }
-.sc-people .swiper-slide .img-area{ position: relative; padding-bottom: calc((520/1097)*100%); }
-.sc-people .swiper-slide img{ position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
-.sc-people .swiper-slide .text-area{ overflow: hidden; margin-top: 29px; word-break: keep-all; }
-.sc-people .swiper-slide .title-box{ display: flex; align-items: flex-start; }
-.sc-people .text-area h3{ padding-right: 26px; line-height: 36px; font-size: 25px; letter-spacing: -0.5px; font-weight: bold; }
-.sc-people .text-area .who-box{ margin-top: 16px; line-height: 24px; letter-spacing: -0.28px; }
-.sc-people .text-area .who-box span{ }
-.sc-people .text-area .who-box span+span::before{ display: inline-block; margin: 0 6px; width: 1px; height: 10px; background-color: #000; content: ""; }
+.sc-people .swiper-slide a{ 
+    display: block; 
+}
+.sc-people .swiper-slide .img-area{ 
+    position: relative; 
+    padding-bottom: 
+    calc((520/1097)*100%); 
+}
+.sc-people .swiper-slide img{ 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+}
+.sc-people .swiper-slide .text-area{ 
+    overflow: hidden; margin-top: 29px; word-break: keep-all; 
+}
+.sc-people .swiper-slide .title-box{ 
+    display: flex; 
+    align-items: flex-start; 
+}
+.sc-people .text-area h3{ 
+    padding-right: 26px; 
+    line-height: 36px; 
+    font-size: 25px; 
+    letter-spacing: -0.5px; 
+    font-weight: 700; 
+}
+.sc-people .text-area .who-box{ 
+    margin-top: 16px; 
+    line-height: 24px; 
+    letter-spacing: -0.28px; 
+}
+.sc-people .text-area .who-box span+span::before{ 
+    display: inline-block; 
+    margin: 0 6px; 
+    width: 1px; 
+    height: 10px; 
+    background: #000; 
+    content: ''; 
+}
 
 
 
-.sc-benefits{ padding: 95px 0 0; }
-.sc-benefits .common-inner{}
-.sc-benefits .benefits-slider{ padding-bottom: 68px; margin: 55px 0px 0; }
-.sc-benefits .benefits-slider .swiper-slide{ }
-.sc-benefits .swiper-slide a{ display: block; }
-.sc-benefits .swiper-slide .img-area{ position: relative; padding-bottom: 100%; }
-.sc-benefits .swiper-slide img{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; object-fit: cover; }
-.sc-benefits .swiper-slide .text-area{ overflow: hidden; margin-top: 29px; word-break: keep-all; word-wrap: break-word; }
-.sc-benefits .text-area h3{ padding-right: 26px; line-height: 36px; font-size: 25px; letter-spacing: -0.5px; }
-.sc-benefits .text-area .desc{ margin-top: 20px; font-size: 18px; line-height: 30px; letter-spacing: -0.36px; }
+.sc-benefits{ 
+    padding: 95px 0 0; 
+}
+.sc-benefits .benefits-slider{ 
+    padding-bottom: 68px; 
+    margin: 55px 0px 0; 
+}
+.sc-benefits .swiper-slide a{ 
+    display: block; 
+}
+.sc-benefits .swiper-slide .img-area{ 
+    position: relative; 
+    padding-bottom: 100%; 
+}
+.sc-benefits .swiper-slide img{ 
+    position: absolute; 
+    top: 0; 
+    bottom: 0; 
+    left: 0; 
+    right: 0; 
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+}
+.sc-benefits .swiper-slide .text-area{ 
+    overflow: hidden; 
+    margin-top: 29px; 
+    word-break: keep-all; 
+    word-wrap: break-word; 
+}
+.sc-benefits .text-area h3{ 
+    padding-right: 26px; 
+    line-height: 36px; 
+    font-size: 25px; 
+    letter-spacing: -0.5px; 
+}
+.sc-benefits .text-area .desc{ 
+    margin-top: 20px; 
+    font-size: 18px; 
+    line-height: 30px; 
+    letter-spacing: -0.36px; 
+}
 
 
 
-.sc-support{ padding: 95px 0 102px; }
-.sc-support h2{ font-size: 25px; line-height: 32px; letter-spacing: -0.25px; }
-.sc-support .link-support{ display: inline-block; vertical-align: middle; margin-top: 18px; font-size: 18px; line-height: 27px; letter-spacing: -0.36px; }
-.sc-support .link-support::after{ display: inline-block; vertical-align: middle; margin-left: 11px; background-position: -76px -172px; width: 32px; height: 32px; content: ''; }
+.sc-support{ 
+    padding: 95px 0 102px; 
+}
+.sc-support h2{ 
+    font-size: 25px; 
+    line-height: 32px; 
+    letter-spacing: -0.25px; 
+}
+.sc-support .link-support{ 
+    display: inline-block; 
+    vertical-align: middle; 
+    margin-top: 18px; 
+    font-size: 18px; 
+    line-height: 27px; 
+    letter-spacing: -0.36px; 
+}
+.sc-support .link-support::after{ 
+    display: inline-block; 
+    vertical-align: middle; 
+    margin-left: 11px; 
+    background-position: -76px -172px; 
+    width: 32px; 
+    height: 32px; 
+    content: ''; 
+}
 
 
 /* PC 1280px ~ [1025px] */
@@ -397,7 +601,9 @@
         width: 80px;
         padding-left: 8px;
     }
-    .sc-team .group-career1 .input-box label{margin: 0;}
+    .sc-team .group-career1 .input-box label{
+        margin: 0;
+    }
     .sc-team .group-career1 .flex-area > *{
         flex: 1 0 45px;
     }
