--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -206,13 +206,13 @@
     padding: 11px 0 9px;
 }
 .gnb .side-nav .group-nav .list+.list::before{
-    content: "";
     position: absolute;
     top: 0;
     left: 22px;
     right: 22px;
     height: 1px;
     background: #d0d0d0;
+    content: '';
 }
 .gnb .side-nav .group-nav .lang-box{
     padding: 19px 0 11px;
@@ -232,8 +232,8 @@
     height: 8px;
     margin: 8px 10px 0 0;
     border-radius: 50%;
-    content: "";
     border: 1px solid #d0d0d0;
+    content: '';
 }
 .gnb .side-nav .group-nav .lang.active::before{
     background: #000;
