--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'TTHoves';
-    src: url('../fonts/TTHoves-Medium.woff') format('woff');
+    src: url('../fonts/TTHoves-Medium.woff2') format('woff2');
     font-weight: 500;
 }
 @font-face {
     font-family: 'TTHoves';
-    src: url('../fonts/TTHoves-SemiBold.woff') format('woff');
+    src: url('../fonts/TTHoves-SemiBold.woff2') format('woff2');
     font-weight: 600;
 }
 @font-face {
     font-family: 'NanumSquare';
-    src: url('../fonts/NanumSquareOTF-Regular.woff') format('woff');
+    src: url('../fonts/NanumSquareOTF-Regular.woff2') format('woff2');
     font-weight: 400;
 }
 @font-face {
     font-family: 'NanumSquare';
-    src: url('../fonts/NanumSquareOTF-Bold.woff') format('woff');
+    src: url('../fonts/NanumSquareOTF-Bold.woff2') format('woff2');
     font-weight: 700;
 }
