--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -4,8 +4,6 @@
 .wrapper{
     padding-top: 64px;
 }
-
-
 .skip-nav{ 
     position: relative; 
     z-index: 15;
@@ -13,12 +11,17 @@
 .skip-nav a{ 
     position: absolute; 
     top: -94px; 
-    line-height: 30px; 
-    background: #ccc; 
+    width: 80px;
+    line-height: 30px;
+    font-size: 14px;
+    text-align: center;
+    background: #313131; 
+    color: #fff;
 }
 .skip-nav a:focus,
 .skip-nav a:active{ 
-    top: -60px; 
+    top: -61px;
+    left: 1px;
 }
 
 
